Remove instance getters, improve command logic, register APi